# nn.pl

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SCHEME.md  IMPLEMENTATION_SUMMARY.md  README_PROLOG.md  nn.pl
.github/agents/: nn.pli.md  nn.raku.md  nn.rkt.md  nn.scm.md
lang/lua/: CMakeLists.txt
lang/pl/: demo.pl  demo_modules.pl  test_modules.pl  test_nn.pl
lang/pli/: README.md  demo.pli  example.pli  nn.pli  test_nn.pli
lang/rkt/: example.rkt
lang/scm/: README.md  demo.scm  example.scm  nn.scm  test-nn.scm
