CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

# Install Lua files
INSTALL(FILES
  Abs.lua
  AbsCriterion.lua
  Add.lua
  AddConstant.lua
  BCECriterion.lua
  BatchNormalization.lua
  Bilinear.lua
  Bottle.lua
  CAdd.lua
  CAddTable.lua
  CAddTensorTable.lua
  CDivTable.lua
  CMaxTable.lua
  CMinTable.lua
  CMul.lua
  CMulTable.lua
  CReLU.lua
  CSubTable.lua
  Clamp.lua
  ClassNLLCriterion.lua
  ClassSimplexCriterion.lua
  Collapse.lua
  Concat.lua
  ConcatTable.lua
  Constant.lua
  Container.lua
  Contiguous.lua
  Convert.lua
  Copy.lua
  Cosine.lua
  CosineDistance.lua
  CosineEmbeddingCriterion.lua
  Criterion.lua
  CriterionTable.lua
  CrossEntropyCriterion.lua
  Decorator.lua
  DepthConcat.lua
  DistKLDivCriterion.lua
  DistanceRatioCriterion.lua
  DontCast.lua
  DotProduct.lua
  Dropout.lua
  ELU.lua
  ErrorMessages.lua
  Euclidean.lua
  Exp.lua
  FeatureLPPooling.lua
  FlattenTable.lua
  GPU.lua
  GatedLinearUnit.lua
  GradientReversal.lua
  HardShrink.lua
  HardTanh.lua
  HingeEmbeddingCriterion.lua
  Identity.lua
  Index.lua
  IndexLinear.lua
  init.lua
  Jacobian.lua
  JoinTable.lua
  Kmeans.lua
  L1Cost.lua
  L1HingeEmbeddingCriterion.lua
  L1Penalty.lua
  LayerNormalization.lua
  LeakyReLU.lua
  Linear.lua
  LinearWeightNorm.lua
  Log.lua
  LogSigmoid.lua
  LogSoftMax.lua
  LookupTable.lua
  MapTable.lua
  MarginCriterion.lua
  MarginRankingCriterion.lua
  MaskedSelect.lua
  Max.lua
  Maxout.lua
  Mean.lua
  Min.lua
  MixtureTable.lua
  MM.lua
  Module.lua
  ModuleCriterion.lua
  MSECriterion.lua
  Mul.lua
  MulConstant.lua
  MultiCriterion.lua
  MultiLabelMarginCriterion.lua
  MultiLabelSoftMarginCriterion.lua
  MultiMarginCriterion.lua
  MV.lua
  NaN.lua
  Narrow.lua
  NarrowTable.lua
  Normalize.lua
  OneHot.lua
  Padding.lua
  PairwiseDistance.lua
  Parallel.lua
  ParallelCriterion.lua
  ParallelTable.lua
  PartialLinear.lua
  PixelShuffle.lua
  Power.lua
  PReLU.lua
  PrintSize.lua
  Profile.lua
  ReLU6.lua
  ReLU.lua
  Replicate.lua
  Reshape.lua
  RReLU.lua
  Select.lua
  SelectTable.lua
  Sequential.lua
  Sigmoid.lua
  SmoothL1Criterion.lua
  SoftMarginCriterion.lua
  SoftMax.lua
  SoftMin.lua
  SoftPlus.lua
  SoftShrink.lua
  SoftSign.lua
  SparseJacobian.lua
  SparseLinear.lua
  SpatialAdaptiveAveragePooling.lua
  SpatialAdaptiveMaxPooling.lua
  SpatialAutoCropMSECriterion.lua
  SpatialAveragePooling.lua
  SpatialBatchNormalization.lua
  SpatialClassNLLCriterion.lua
  SpatialContrastiveNormalization.lua
  SpatialConvolution.lua
  SpatialConvolutionLocal.lua
  SpatialConvolutionMap.lua
  SpatialConvolutionMM.lua
  SpatialCrossMapLRN.lua
  SpatialDepthWiseConvolution.lua
  SpatialDilatedConvolution.lua
  SpatialDilatedMaxPooling.lua
  SpatialDivisiveNormalization.lua
  SpatialDropout.lua
  SpatialFractionalMaxPooling.lua
  SpatialFullConvolution.lua
  SpatialFullConvolutionMap.lua
  SpatialLogSoftMax.lua
  SpatialLPPooling.lua
  SpatialMaxPooling.lua
  SpatialMaxUnpooling.lua
  SpatialReflectionPadding.lua
  SpatialReplicationPadding.lua
  SpatialSoftMax.lua
  SpatialSubSampling.lua
  SpatialSubtractiveNormalization.lua
  SpatialUpSamplingBilinear.lua
  SpatialUpSamplingNearest.lua
  SpatialZeroPadding.lua
  SplitTable.lua
  Sqrt.lua
  Square.lua
  Squeeze.lua
  StochasticGradient.lua
  Sum.lua
  Tanh.lua
  TanhShrink.lua
  TemporalConvolution.lua
  TemporalDynamicKMaxPooling.lua
  TemporalMaxPooling.lua
  TemporalRowConvolution.lua
  TemporalSubSampling.lua
  THNN.lua
  Threshold.lua
  Transpose.lua
  Unsqueeze.lua
  UpSampling.lua
  utils.lua
  View.lua
  VolumetricAveragePooling.lua
  VolumetricBatchNormalization.lua
  VolumetricConvolution.lua
  VolumetricDilatedConvolution.lua
  VolumetricDilatedMaxPooling.lua
  VolumetricDropout.lua
  VolumetricFractionalMaxPooling.lua
  VolumetricFullConvolution.lua
  VolumetricMaxPooling.lua
  VolumetricMaxUnpooling.lua
  VolumetricReplicationPadding.lua
  WeightedEuclidean.lua
  WeightedMSECriterion.lua
  WeightNorm.lua
  WhiteNoise.lua
  ZeroGrad.lua
  ZipTable.lua
  ZipTableOneToMany.lua
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/nn")

# Build THNN C library
ADD_SUBDIRECTORY(../c ${CMAKE_CURRENT_BINARY_DIR}/c)
